user controller init finish
add file logger

add mail controller

add Roles validate

--- a/src/main/resources/templates/mail/register.html
+++ b/src/main/resources/templates/mail/register.html
@@ -3,5 +3,5 @@
 <p class="font-v2">欢迎您成为趣博客网站的用户。 </p>
 <p class="font-v2">点击下面按钮进行注册，<strong>非本人操作可忽略</strong></p>
 <a href="${url}" class="funny-button">
-    点击此处验证邮箱
+    点击完成注册
 </a>
